@@ -152,19 +152,19 @@ private:
 	void GetItemFileNames(int sel, PathContext * paths) const;
 	BOOL IsItemLeftOnly(int code);
 	BOOL IsItemRightOnly(int code);
-	BOOL IsItemCopyableToLeft(const DIFFITEM & di);
-	BOOL IsItemCopyableToRight(const DIFFITEM & di);
-	BOOL IsItemDeletableOnLeft(const DIFFITEM & di);
-	BOOL IsItemDeletableOnRight(const DIFFITEM & di);
-	BOOL IsItemDeletableOnBoth(const DIFFITEM & di);
+	BOOL IsItemCopyableToLeft(const DIFFITEM & di) const;
+	BOOL IsItemCopyableToRight(const DIFFITEM & di) const;
+	BOOL IsItemDeletableOnLeft(const DIFFITEM & di) const;
+	BOOL IsItemDeletableOnRight(const DIFFITEM & di) const;
+	BOOL IsItemDeletableOnBoth(const DIFFITEM & di) const;
 	BOOL IsItemOpenable(const DIFFITEM & di) const;
 	BOOL AreItemsOpenable(const DIFFITEM & di1, const DIFFITEM & di2) const;
-	BOOL IsItemOpenableOnLeft(const DIFFITEM & di);
-	BOOL IsItemOpenableOnRight(const DIFFITEM & di);
-	BOOL IsItemOpenableOnLeftWith(const DIFFITEM & di);
-	BOOL IsItemOpenableOnRightWith(const DIFFITEM & di);
-	BOOL IsItemCopyableToOnLeft(const DIFFITEM & di);
-	BOOL IsItemCopyableToOnRight(const DIFFITEM & di);
+	BOOL IsItemOpenableOnLeft(const DIFFITEM & di) const;
+	BOOL IsItemOpenableOnRight(const DIFFITEM & di) const;
+	BOOL IsItemOpenableOnLeftWith(const DIFFITEM & di) const;
+	BOOL IsItemOpenableOnRightWith(const DIFFITEM & di) const;
+	BOOL IsItemCopyableToOnLeft(const DIFFITEM & di) const;
+	BOOL IsItemCopyableToOnRight(const DIFFITEM & di) const;
 	void DoCopyLeftToRight();
 	void DoCopyRightToLeft();
 	void DoDelLeft();
